# Nameless-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  build.sh
Apps/CoreExecutable/: CMakeLists.txt
Apps/CoreExecutable/include/: extern.hpp
Apps/CoreExecutable/src/: main.cpp
Apps/Editor/: CMakeLists.txt
Apps/Editor/src/: Game.cpp  Game.hpp  main.cpp
Apps/Example-App/: CMakeLists.txt
Apps/Example-App/config/: controls.ini
Apps/Example-App/src/: Game.cpp  Game.hpp  main.cpp
BuildScripts/: build.sh  pre-build.sh
Doc/NamelessLib/: Doxyfile.in
NLSharp/CSharpCompiler/: CSharpCompiler.csproj
NLSharp/CSharpCompiler/src/: Compiler.cs
NLSharp/CoreLibs/: CoreLibs.csproj
NLSharp/CoreLibs/src/: Core.cs
NLSharp/CoreLibs/src/ComponentSystem/: Component.cs
NamelessLib/: CMakeLists.txt
NamelessLib/CSharpCompiler/: CMakeLists.txt  CSharpCompiler.csproj  Compiler.cs
NamelessLib/CSharpLibs/: CMakeLists.txt  CSharpLibs.csproj  Placeholder.cs
NamelessLib/CSharpLibs/ComponentSystem/: ECInterop.cs  EntityManager.cs
NamelessLib/include/NLS-Engine/: Placeholder.hpp
NamelessLib/include/NLS-Engine/ComponentSys/: Component.hpp  Entity.hpp
NamelessLib/include/NLS-Engine/Core/: DefaultEngine.hpp  Engine.hpp  EntryPoint.hpp  IGameTemplate.hpp  ProjectManager.hpp  SubsystemLocator.hpp  Utils.hpp
NamelessLib/include/NLS-Engine/ECS/: ComponentHandler.hpp  ComponentTypes.hpp  ECSManager.hpp
NamelessLib/include/NLS-Engine/EventSystem/: Event.hpp  EventCapable.hpp
NamelessLib/include/NLS-Engine/IO/: InputManager.hpp  KeyBindingSet.hpp  KeyCodes.hpp  ReadWriteFile.hpp
NamelessLib/include/NLS-Engine/Rendering/: GLContext.hpp  Window.hpp  WindowManager.hpp
NamelessLib/include/NLS-Engine/SharpScripting/: AssemblyManager.hpp  EngineDelegates.hpp  RuntimeHost.hpp
NamelessLib/src/: Placeholder.cpp
NamelessLib/src/Core/: DefaultEngine.cpp  Engine.cpp  EntryPoint.cpp  IGameTemplate.cpp  ProjectManager.cpp  SubsystemLocator.cpp  Utils.cpp
NamelessLib/src/EventSystem/: EventCapable.cpp
NamelessLib/src/IO/: InputManager.cpp  KeyBindingSet.cpp  ReadWriteFile.cpp
NamelessLib/src/Rendering/: GLContext.cpp  Window.cpp  WindowManager.cpp
NamelessLib/src/SharpScripting/: AssemblyManager.cpp  RuntimeHost.cpp
Projects/MyTestProject/: MyTestProject.csproj
Projects/MyTestProject/Scripts/: MyNewScript.scr
